--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "ejs": "^3.1.5",
         "express": "^4.17.1",
         "fs": "^0.0.1-security",
+        "json-query": "^2.2.2",
         "lodash": "^4.17.21"
     },
     "devDependencies": {
